--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>DarkChatting</title>
 
 <pre>
-<img src="https://darkchatting.github.io/DarkChattingMain.png" alt="I lost the picture. Sorry..."/>
+<img src="https://darkchatting.github.io/DarkChattingMain.png" alt="I lost the picture. Sorry...",width="100%"/>
 <span style = " font-size:1.5em;  color: black;">
 <strong>
 This place is under construction!
