--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 </head>
 <title>DarkChatting</title>
 
-<pre>
+
 <img src="https://darkchatting.github.io/DarkChattingMain.png" alt="I lost the picture. Sorry...",width="100%"/>
 <span style = " font-size:1.5em;  color: black;">
 <strong>
-This place is under construction!
+This place is under construction!<br>
 We apologize for the inconvenience.
+<pre>
 
 
 
-
-
+</pre>
 --------------------
 Beta Tester:
 Thank for Siri, Kri, Yellowstrawberry, Wizard
@@ -23,4 +23,3 @@ Thank for Siri, Kri, Yellowstrawberry, Wizard
 <!-- <a href="https://darkchatting.github.io/DarkChattingMain.png">download windows</a> -->
 <strong>
 </span>
-</pre>
