--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div id="dtoggle">free download</div>
 	<div id="menu" style="display: none;">
 	<a class="link" href="https://drive.google.com/file/d/1WCwlpciJeX71UXf26SptkWl3YJVKYwTN/view?usp=sharing" download>Zip File (.zip)</a><br>
+	</div>
 </div>
 <pre>
 
