--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <link rel="shortcut icon" href="https://darkchatting.github.io/DarkChattingIcon.ico">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script> 
   <meta name="google-site-verification" content="V8C-ifTe3jYTc7I61zrTC8muh6pxshOshe0l0tP1C-U" />
 </head>
 <title>DarkChatting</title>
