--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <title>DarkChatting</title>
 
-
+<body>
 <img src="https://darkchatting.github.io/DarkChattingMain.png" alt="I lost the picture. Sorry...",width="100%"/>
 <span style = " font-size:1.5em;  color: black;">
 <strong>
@@ -26,5 +26,11 @@ Beta Tester:
 Thank for Siri, Kri, Yellowstrawberry, Wizard
 --------------------
 <!-- <a href="https://darkchatting.github.io/DarkChattingMain.png">download windows</a> -->
-<strong>
-</span>
+		<strong>
+	</span>
+	<script type="text/javascript">
+		document.getElementById('dtoggle').addEventListener('click', function(){
+			$('#menu').fadeToggle(200);
+		});
+	</script>
+</body>
