--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <img src="https://darkchatting.github.io/DarkChattingMain.png" alt="I lost the picture. Sorry...",width="100%"/>
 <span style = " font-size:1.5em;  color: black;">
 <strong>
-  <h1>ASCII::Check</h1>
-<div id="dtoggle">free download</div>
-	<div id="menu" style="display: none;">
-	<a class="link" href="https://drive.google.com/file/d/1WCwlpciJeX71UXf26SptkWl3YJVKYwTN/view?usp=sharing" download>Zip File (.zip)</a><br>
-	</div>
+<h1>ASCII::Check</h1>
+<a href="https://drive.google.com/file/d/1WCwlpciJeX71UXf26SptkWl3YJVKYwTN/view?usp=sharing">ASCII::Check v1.0</a>
+
+</div>
 </div>
 <pre>
 
@@ -28,9 +27,4 @@ Thank for Siri, Kri, Yellowstrawberry, Wizard
 <!-- <a href="https://darkchatting.github.io/DarkChattingMain.png">download windows</a> -->
 		<strong>
 	</span>
-	<script type="text/javascript">
-		document.getElementById('dtoggle').addEventListener('click', function(){
-			$('#menu').fadeToggle(200);
-		});
-	</script>
 </body>
