--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <img src="https://darkchatting.github.io/DarkChattingMain.png" alt="I lost the picture. Sorry...",width="100%"/>
 <span style = " font-size:1.5em;  color: black;">
 <strong>
-<h1>ASCII::Check</h1>
-<a href="https://drive.google.com/file/d/1WCwlpciJeX71UXf26SptkWl3YJVKYwTN/view?usp=sharing">ASCII::Check v1.0</a>
+<h1>ASCII::Check v1.2</h1>
+<a href="https://drive.google.com/file/d/1BWHOovxFVoagXKg0DjXO2Nu3WPZxzSP_/view?usp=sharing">ASCII::Check v1.2</a>
+<p>	
+<h1>ASCII::Check v1.0</h1>
+<a href="https://drive.google.com/file/d/1Y-TLUMR2vrBNSkhMBPMpD2-AABbFz3pb/view?usp=sharing">ASCII::Check v1.0</a>
 <pre>
 
 
